Fix image links

--- a/versions/v0.3.md
+++ b/versions/v0.3.md
@@ -15,7 +15,7 @@ _7/14/2021_
   * [Health impact assessment methods](#health-impact-assessment-methods)
      * [Future baseline disease rates](#future-baseline-disease-rates)
 
-<!-- Added by: caleb, at: Wed Jul 14 09:50:09 PDT 2021 -->
+<!-- Added by: caleb, at: Wed Jul 14 09:58:48 PDT 2021 -->
 
 <!--te-->
 ## Introduction
@@ -60,7 +60,7 @@ FATE estimates national population-weighted concentrations of PM<sub>2.5</sub> a
 The adjoint sensitivities are calculated for chemical species, thus they do not vary by sector. The coefficients are provided as 2D arrays for surface-layer emissions; this impacts use of these sensitivities for e.g. aviation and electricity generation sectors, where the altitude of the emissions would cause the pollutant response to be different than the same mass of emitted species from a sector emitting only at the surface.
 
 ![A screenshot of a map
-Description automatically generated with medium confidence](/assets/usa_nox_pm25_adjoint_sensitivities.png)
+Description automatically generated with medium confidence](/FATE-doc/assets/usa_nox_pm25_adjoint_sensitivities.png)
 
 **Figure 1.** Subset of USA population-weighted PM<sub>2.5</sub> adjoint sensitivities for NOx emissions
 
@@ -68,7 +68,7 @@ Description automatically generated with medium confidence](/assets/usa_nox_pm25
 
 The adjoint response coefficients for the PM<sub>2.5</sub> calculations give the sensitivity of population-weighted annual average PM<sub>2.5</sub> to emissions of BC, OC, NH3, NOX, and SO2. FATE supports 165 countries; an example of the sensitivity of USA PM<sub>2.5</sub> exposure to NOx emissions is shown in Figure 1.
 
-![](/assets/pm_map_cropped.svg)
+![](/FATE-doc/assets/pm_map_cropped.svg)
 
 **Figure 2.** Countries with PM<sub>2.5</sub> sensitivities
 
@@ -82,7 +82,7 @@ The adjoint values are computed at the coarse scale, but the user may wish to pr
 
 For O<sub>3</sub>, we directly use simulated surface O<sub>3</sub> concentrations at the 2º × 2.5º resolution. Within the GEOS-Chem adjoint model, the exposures are computed as the maximum 6-month mean of the daily 1-hour maximum O<sub>3</sub>. Due to the non-linearity of O<sub>3</sub> chemistry, the local linear response calculated by the adjoint will not be representative of actual changes in O<sub>3</sub> exposure over large changes in emissions. To account for this, we include the option to scale adjoint sensitivities to anthropogenic exposures, calculated from GEOS-Chem, based on input anthropogenic emissions. This methodology is identical to what is done for PM<sub>2.5</sub>.
 
-![](/assets/o3_map.svg)
+![](/FATE-doc/assets/o3_map.svg)
 
 **Figure 3.** Countries with O<sub>3</sub> sensitivities
 
@@ -136,7 +136,7 @@ The quantity in brackets is the population attributable fraction – the fractio
 A key feature of the PM<sub>2.5</sub> concentration-response curves is that they are nonlinear and flatten considerably at high concentrations, particularly for cardiovascular health endpoints. The shape of the concentration-response curve implies that sensitivity of health effects to a unit change in PM<sub>2.5</sub> concentration in very polluted environments is diminished compared to that in clean environments. Therefore, rather than using a continuous parametric function, we use RR lookup tables, which are provided by the GBD 2019. RRs between concentration points in the lookup tables are linearly interpolated.
 
 ![Chart, line chart
-Description automatically generated](/assets/pm_relative_risks.png)
+Description automatically generated](/FATE-doc/assets/pm_relative_risks.png)
 
 **Figure 4.** PM<sub>2.5</sub> concentration-response curves for each health endpoint. Ischemic stroke and heart disease have different curves for each age group, however just the mean response is shown here.
 
