Test remove fate-doc from md

--- a/versions/v1.0.md
+++ b/versions/v1.0.md
@@ -93,7 +93,7 @@ The adjoint response coefficients for the PM<sub>2.5</sub> calculations give the
 
 The national population-weighted PM<sub>2.5</sub> annual average concentrations (i.e., exposures) are calculated using satellite-derived estimates of surface PM<sub>2.5</sub> concentrations at the 0.1° × 0.1° scale applied as downscaling factors to the GEOS-Chem model’s PM<sub>2.5</sub> concentrations at the 2° × 2.5° resolution. The GEOS-Chem adjoint is then run at the 2° × 2.5° resolution to calculate the emission response coefficients. Using the fine-scale concentrations of the satellite-derived products improves the estimation of population exposure without changing the overall modeled value of PM<sub>2.5</sub> concentrations at the coarse scale. However, given that there are appreciable differences between GEOS-Chem simulated PM<sub>2.5</sub> concentrations and those of the satellite-based product at the coarse scale, we also include an option to adjust (“rescale”) the PM<sub>2.5</sub> concentrations to match those from the satellite-based product, as the latter has been calibrated against a large collection of available in-situ measurements for 2010. For some applications using the adjoint sensitivities to estimate concentrations for years far from 2010, it may be desired to adjust the calculations to remove the rescaling because the satellite-derived estimates would no longer be representative of pollutant exposures.
 
-![](/fate-doc/assets/pm_map_cropped.svg)
+![](/assets/pm_map_cropped.svg)
 
 **Figure 2.** Countries with PM<sub>2.5</sub> sensitivities. 165 countries are supported.
 
