--- a/versions/v1.0.md
+++ b/versions/v1.0.md
@@ -83,7 +83,7 @@ It is important to note that the adjoint calculation provides a local linear app
 The adjoint sensitivities are calculated for chemical species, thus they do not vary by sector. These coefficients are provided as 2D arrays for surface-layer emissions. When applying these sensitivities to calculate impacts from sectors such as aviation, it is important to consider the assumption of surface emissions. Since aviation releases emissions at higher altitudes, the pollutant response may vary compared to the same mass of emitted species from a sector emitting solely at the surface.
 
 ![A screenshot of a map
-Description automatically generated with medium confidence](/fate-doc/assets/usa_nox_pm25_adjoint_sensitivities.png)
+Description automatically generated with medium confidence](/FATE-doc/assets/usa_nox_pm25_adjoint_sensitivities.png)
 
 **Figure 1.** Subset of USA PM<sub>2.5</sub> adjoint sensitivities for NO<sub>x</sub> emissions. Values represent the degree to which gird cells are sources of NO<sub>x</sub> that contribute to population-weighted PM<sub>2.5</sub> exposure in the United States.
 
@@ -93,7 +93,7 @@ The adjoint response coefficients for the PM<sub>2.5</sub> calculations give the
 
 The national population-weighted PM<sub>2.5</sub> annual average concentrations (i.e., exposures) are calculated using satellite-derived estimates of surface PM<sub>2.5</sub> concentrations at the 0.1° × 0.1° scale applied as downscaling factors to the GEOS-Chem model’s PM<sub>2.5</sub> concentrations at the 2° × 2.5° resolution. The GEOS-Chem adjoint is then run at the 2° × 2.5° resolution to calculate the emission response coefficients. Using the fine-scale concentrations of the satellite-derived products improves the estimation of population exposure without changing the overall modeled value of PM<sub>2.5</sub> concentrations at the coarse scale. However, given that there are appreciable differences between GEOS-Chem simulated PM<sub>2.5</sub> concentrations and those of the satellite-based product at the coarse scale, we also include an option to adjust (“rescale”) the PM<sub>2.5</sub> concentrations to match those from the satellite-based product, as the latter has been calibrated against a large collection of available in-situ measurements for 2010. For some applications using the adjoint sensitivities to estimate concentrations for years far from 2010, it may be desired to adjust the calculations to remove the rescaling because the satellite-derived estimates would no longer be representative of pollutant exposures.
 
-![](/assets/pm_map_cropped.svg)
+![](/FATE-doc/assets/pm_map_cropped.svg)
 
 **Figure 2.** Countries with PM<sub>2.5</sub> sensitivities. 165 countries are supported.
 
@@ -107,7 +107,7 @@ For O<sub>3</sub>, we directly use simulated surface O<sub>3</sub> concentration
 
 The unscaled adjoint sensitivities are the local linear response of a pollutant exposure to changes in emissions and are most applicable over small emission perturbations where the non-linear effects are smaller. The anthropogenic scaled sensitivities are most applicable over larger changes in emissions. We suggest that, if possible, users run scenarios using both the unscaled and scaled sensitivities. Following this, users can choose the more appropriate run and use the difference between the two runs as an uncertainty bound, on either side, to assess uncertainty in the exposure estimate. Rather than propagating this uncertainty into the health calculation, we suggest that users consider uncertainty from the exposure calculation as separate from the health calculation.
 
-![](/fate-doc/assets/o3_map.svg)
+![](/FATE-doc/assets/o3_map.svg)
 
 **Figure 3.** Countries with O<sub>3</sub> sensitivities. 19 individual G20 countries and 24 additional EU member countries are supported.
 
@@ -194,7 +194,7 @@ The quantity in brackets is the population attributable fraction – the fractio
 A key feature of the PM<sub>2.5</sub> concentration-response curves is that they are nonlinear and flatten considerably at high concentrations, particularly for cardiovascular health endpoints. The shape of the concentration-response curve implies that sensitivity of health effects to a unit change in PM<sub>2.5</sub> concentration in very polluted environments is diminished compared to that in clean environments. Therefore, rather than using a continuous parametric function, we use RR lookup tables, which are provided by the GBD 2019. RRs between concentration points in the lookup tables are linearly interpolated.
 
 ![Chart, line chart
-Description automatically generated](/fate-doc/assets/pm_relative_risks.png)
+Description automatically generated](/FATE-doc/assets/pm_relative_risks.png)
 
 **Figure 4.** PM<sub>2.5</sub> concentration-response curves for each health endpoint. Ischemic stroke and heart disease have different curves for each age group, however just the mean response is shown here.
 
