--- a/versions/v1.0.md
+++ b/versions/v1.0.md
@@ -29,7 +29,7 @@ _06/01/2023_
 ## Introduction
 The Fast Assessment of Transportation Emissions (FATE) model evaluates air quality and health impacts associated with present or future changes in air pollutant emissions from 9 sectors, including 3 transportation sub-sectors. The tool estimates the national population-weighted ambient PM<sub>2.5</sub> exposure (annual average in µg/m<sup>3</sup>) for 181 countries and ozone (O<sub>3</sub>) exposure (6-month average of the 1hr or 8h daily maximum O<sub>3</sub> in ppb) for 19 individual G20 countries and 24 additional EU member countries. It also outputs the number of premature deaths and disability-adjusted life years (DALYs) associated with exposure to these two pollutants. Supplementary outputs of the tool include national baseline exposures to ambient PM<sub>2.5</sub> and O<sub>3</sub> and detailed health impacts by ambient pollutant, disease, and age group. Health outputs of the tool also include 5th and 95th percentile estimates that reflect uncertainty in the concentration-response relationship. FATE also optionally quantifies the number or premature deaths to a dollar amount using the Value of a Statistical Life (VSL) using two methods.
 
-FATE is a reduced-complexity air quality model, allowing users to simulate national, regional, or global scenarios without the high computational costs usually required by chemical transport models. The extent to which exposures of PM<sub>2.5</sub> and O<sub>3</sub> respond to changes in emissions of primary pollutant species, denoted as sensitivities, are calculated using the adjoint of the GEOS-Chem model. The health impacts associated with exposure to these pollutants are calculated using methods consistent with the [Global Burden of Disease (GBD) 2019](https://www.sciencedirect.com/science/article/pii/S0140673620307522>'>1</a></sup>). The tool is designed to accommodate future updates to GBD health impact assessment methods. To estimate health impacts in future years, the tool considers projected changes in population, age distributions, and baseline disease rates at the national level.
+FATE is a reduced-complexity air quality model, allowing users to simulate national, regional, or global scenarios without the high computational costs usually required by chemical transport models. The extent to which exposures of PM<sub>2.5</sub> and O<sub>3</sub> respond to changes in emissions of primary pollutant species, denoted as sensitivities, are calculated using the adjoint of the GEOS-Chem model. The health impacts associated with exposure to these pollutants are calculated using methods consistent with the [Global Burden of Disease (GBD) 2019](https://www.healthdata.org/gbd). The tool is designed to accommodate future updates to GBD health impact assessment methods. To estimate health impacts in future years, the tool considers projected changes in population, age distributions, and baseline disease rates at the national level.
 
 FATE evaluates the impact of emission changes by comparing health burden and exposure in a user-specified scenario to the burden and exposure of FATE’s built-in baseline. The baseline emissions projections used in FATE are derived from the [ECLIPSE V5a Reference](https://iiasa.ac.at/models-tools-data/global-emission-fields-of-air-pollutants-and-ghgs) scenario. ECLIPSE classifies gridded emissions into 7 primary pollutant species and 9 source sectors, with a spatial resolution of 0.1° × 0.1°. FATE includes annual ECLIPSE baseline emissions data for the years 2015, 2020, 2030, 2040, and 2050, while values for intermediate years are interpolated.
 
@@ -113,7 +113,7 @@ The unscaled adjoint sensitivities are the local linear response of a pollutant 
 
 O<sub>3</sub> exposure is sensitive to volatile organic compounds (VOCs); however, there are only a few species of VOCs that are considered in GEOS-Chem. For more accurate VOC scenarios, we suggest that users only consider emissions of the following species: ≥C4-alkanes, formaldehyde (HCHO), ethane (C2H6), propane (C3H8), propene (C3H6), acetone, methyl ethyl ketone and acetaldehyde.
 
-The O<sub>3</sub> exposures calculated in GEOS-Chem differ from those used in the GBD 2019 study; the latter incorporate both in-situ monitor observations and simulated concentrations from multiple models using a [kriging methodology](https://doi.org/10.1017/bca.2017.12). Consistent with the sensitivities for PM<sub>2.5</sub>, an additional scaling factor has been calculated to convert sensitivities from being with respect to the GEOS-Chem exposures (based on the maximum 6-month mean of the 1-hour daily maximum) to being with respect to the GBD 2019 study exposures (based on the 6-month mean of the 8-hour daily maximum).
+The O<sub>3</sub> exposures calculated in GEOS-Chem differ from those used in the GBD 2019 study; the latter incorporate both in-situ monitor observations and simulated concentrations from multiple models using a [kriging methodology](https://pubs.acs.org/doi/10.1021/acs.est.0c07742). Consistent with the sensitivities for PM<sub>2.5</sub>, an additional scaling factor has been calculated to convert sensitivities from being with respect to the GEOS-Chem exposures (based on the maximum 6-month mean of the 1-hour daily maximum) to being with respect to the GBD 2019 study exposures (based on the 6-month mean of the 8-hour daily maximum).
 
 Health impacts for O<sub>3</sub> can also be assessed using different exposure estimate methods if desired. The O<sub>3</sub> exposure sensitivities are calculated for a metric of the maximum 6-month mean of the daily 1-hour maximum O<sub>3</sub> at the surface level (\~50 meters), which is the approximate center altitude of the first layer of GEOS-Chem. Additionally, the maximum 6-month mean O<sub>3</sub> has been calculated for the 8-hour daily max, and adjusted to a height of 2 meters (a level more consistent with O<sub>3</sub> exposure), and the ratio of these two quantities are provided as scaling factors for each country. These ratios can be applied by the user (to the total exposure, adjoint coefficients, and natural exposure in each country) to estimate health impacts based on the maximum 6-month mean of daily 8-hour max concentrations at the 2m height, rather than the 6-month mean of daily 1-hour max at \~50 m.
 
@@ -153,7 +153,7 @@ Similar to handling tabular absolute perturbations, tabular independent emission
 For gridded independent emissions, the user’s input replaces the ECLIPSE baseline directly for specified species, sectors, and grid cells after necessary unit conversion or re-gridding.
 
 ## Health impact assessment methods
-The health impacts of PM<sub>2.5</sub> and O<sub>3</sub> exposure are calculated for each country using the “attributable fraction” approach. This approach is widely used by the [GBD study](http://hdl.handle.net/10986/24440), the [World Health Organization](https://www.bls.gov/data/inflation_calculator.htm), the [U.S. Environmental Protection Agency](https://data.worldbank.org/indicator/NY.GNP.PCAP.CD), and throughout the peer-reviewed literature. For each scenario, FATE estimates the number of cases of various health endpoints by age group attributable to each pollutant.
+The health impacts of PM<sub>2.5</sub> and O<sub>3</sub> exposure are calculated for each country using the “attributable fraction” approach. This approach is widely used by the [GBD study](https://www.sciencedirect.com/science/article/pii/S0140673620307522 ), the [World Health Organization](https://www.euro.who.int/__data/assets/pdf_file/0006/298482/Health-risk-assessment-air-pollution-General-principles-en.pdf), the [U.S. Environmental Protection Agency](https://www.epa.gov/sites/production/files/2020-07/documents/naaqs-pm_ria_final_2012-12.pdf ), and throughout the peer-reviewed literature. For each scenario, FATE estimates the number of cases of various health endpoints by age group attributable to each pollutant.
 
 Health impact methods are consistent with the GBD 2019 study, published in June 2020. GBD studies are broadly respected and increasingly used to inform public health decision-making around the world, at all geopolitical levels – international, national, and sub-national. Risk-outcome pairs are only included in the GBD after thorough review of the epidemiological, toxicology, and human and animal study evidence. The GBD is published annually and is updated over time to reflect the evolution of the state of the science, including in epidemiology and air pollution exposure science.
 
@@ -198,13 +198,13 @@ Description automatically generated](/FATE-doc/assets/pm_relative_risks.png)
 
 **Figure 4.** PM<sub>2.5</sub> concentration-response curves for each health endpoint. Ischemic stroke and heart disease have different curves for each age group, however just the mean response is shown here.
 
-For O<sub>3</sub>, the same RR estimate is used at all concentrations: 1.06 (95% CI 1.03, 1.10) per 10 ppb O<sub>3</sub> increase (six-month average of the 8-hour daily maximum). This RR is based on five studies of long-term O<sub>3</sub> exposure and COPD from Canada, the United Kingdom, and the United States. We assume the concentration-response curve for O<sub>3</sub> is log-linear (the natural log of RR is linearly associated with O<sub>3</sub> concentration). With this assumption, a RR of 1.06 translates to a concentration-response factor of 0.005827 (calculated by \\(\ln{(\frac{\text{RR}}{10})}\\)). This assumption is also used by the [GBD](https://eng.stat.gov.tw/default.aspx) and throughout the scientific literature.
+For O<sub>3</sub>, the same RR estimate is used at all concentrations: 1.06 (95% CI 1.03, 1.10) per 10 ppb O<sub>3</sub> increase (six-month average of the 8-hour daily maximum). This RR is based on five studies of long-term O<sub>3</sub> exposure and COPD from Canada, the United Kingdom, and the United States. We assume the concentration-response curve for O<sub>3</sub> is log-linear (the natural log of RR is linearly associated with O<sub>3</sub> concentration). With this assumption, a RR of 1.06 translates to a concentration-response factor of 0.005827 (calculated by \\(\ln{(\frac{\text{RR}}{10})}\\)). This assumption is also used by the [GBD](https://www.sciencedirect.com/science/article/pii/S0140673620307522 ) and throughout the scientific literature.
 
 The GBD 2019 study calculates the health burden from O<sub>3</sub> exposure above a theoretical minimum risk exposure level (TMREL) taken from a uniform distribution between 29.1 – 35.7 ppb. We cut off any calculation of risk below the midpoint of this range, 32.4 ppb. We have decided not to use a TMREL for PM<sub>2.5</sub> as use of the model typically focuses on smaller perturbations in concentrations well above the TMREL. In addition, epidemiological studies are finding PM<sub>2.5</sub> mortality effects at lower and lower concentrations, down to approximately 2 µg/m<sup>3</sup>, so calculating health impacts at very low concentrations is justified by the current evidence. The TMREL is more important for O<sub>3</sub>, however, because it's a larger fraction of the total concentration.
 
 ### Future baseline disease rates
 
-GBD 2019 gives annual baseline disease rates up to 2019, however a key feature of FATE is estimating the impacts of exposure changes into the future. In order to determine a baseline for projected disease rates we refer to the [GBD Foresight project](https://www.oecd-ilibrary.org/economics/the-long-view_b4f4e03e-en). We use their values through 2040, extending the 2040 rates forward for any years beyond. The dataset of future disease rates for each of the causes affected by air pollution was created by Rita Van Dingenen from Joint Research Centre of the European Commission. As the GBD Foresight projections were based on the GBD 2015 study, Van Dingenen scaled the original GBD Foresight future rates by the ratio of GBD 2017 to GBD 2015 values for the year 2015. Rates for diabetes mellitus type 2 are held constant at present-day levels since the Foresight project only provided future rates for type 1 and type 2 diabetes together.
+GBD 2019 gives annual baseline disease rates up to 2019, however a key feature of FATE is estimating the impacts of exposure changes into the future. In order to determine a baseline for projected disease rates we refer to the [GBD Foresight project](http://www.healthdata.org/research-article/forecasting-life-expectancy-years-life-lost-and-all-cause-and-cause-specific ). We use their values through 2040, extending the 2040 rates forward for any years beyond. The dataset of future disease rates for each of the causes affected by air pollution was created by Rita Van Dingenen from Joint Research Centre of the European Commission. As the GBD Foresight projections were based on the GBD 2015 study, Van Dingenen scaled the original GBD Foresight future rates by the ratio of GBD 2017 to GBD 2015 values for the year 2015. Rates for diabetes mellitus type 2 are held constant at present-day levels since the Foresight project only provided future rates for type 1 and type 2 diabetes together.
 
 Scaling was performed for each cause, land, age group:
 
@@ -217,13 +217,13 @@ The value of statistical life (VSL) is an economic concept that quantifies the e
 
 In FATE, the calculation of VSL is an optional feature that can be performed alongside the estimation of health burden. The model takes into account the influence of a nation’s wealth on its ability to allocate resources for reducing the risk of premature death and incorporates monetary inflation over time. It is important to note that the VSL calculation in FATE focuses solely on the avoidance of premature death and does not include the added value of preventing disability.
 
-FATE utilizes two distinct methods for the calculation of VSL to quantify the number of premature deaths by country, age, and causes. These methods are from [Viscusi and Masterman (2017)](https://www.sciencedirect.com/science/article/pii/S0959378016300784), referred to as the “Viscusi” method in the model, and from [Narain and Sall (2016)](http://hdl.handle.net/10986/24440), referred to as the “World Bank” method because the World Bank published this report. Both methods involve multiplying the baseline VSL for a nation in a given year by the number of premature deaths generated by FATE's health impacts module. However, the two methods yield different estimates due to variations in how the baseline VSL is calculated in each method.
+FATE utilizes two distinct methods for the calculation of VSL to quantify the number of premature deaths by country, age, and causes. These methods are from [Viscusi and Masterman (2017)](https://doi.org/10.1017/bca.2017.12 ), referred to as the “Viscusi” method in the model, and from [Narain and Sall (2016)](http://hdl.handle.net/10986/24440 ), referred to as the “World Bank” method because the World Bank published this report. Both methods involve multiplying the baseline VSL for a nation in a given year by the number of premature deaths generated by FATE's health impacts module. However, the two methods yield different estimates due to variations in how the baseline VSL is calculated in each method.
 
 ## Viscusi Method
 
 To address the challenges of estimating VSL in different countries, Viscusi and Masterman (2017) propose a benefit transfer method that adjusts a base VSL for the United States (\\(\text{VS}L\_{\text{USA}}\\)) of 9.6 million in 2015 USD by the relative incomes of the United States and the countries of interest.
 
-FATE first modifies this value for baseline USA VSL into 2020 USD using the Bureau of Labor Statistics [inflation rate calculator](https://www.bls.gov/data/inflation_calculator.htm), which gives a value for an inflation factor, \\(i_{2020}\\), to convert from 2015 to 2020 USD. The inflation-adjusted value is further scaled to determine VSL for different countries in certain years. This scaling process involves multiplying the adjusted VSL value by the ratio of Gross National Income Per Capital, Atlas Method (GNI) of a specific country in 2015 to that of the United States. This ratio is raised to an income elasticity value, \\(e\\). The Viscusi method assumes that the income elasticity value is one. This assumption is based on an analysis by the authors on income data from various countries that revealed similarity in the income-to-VSL relationship compared to that of the United States, thus negating the need to raise the ratio of GNI Atlas to an exponent other than one. Further scaling by the growth rate in GNI Atlas of the country between 2015 and 2020 (\\(g\_{1}\\)) yields the VSL in 2020 for a given country.
+FATE first modifies this value for baseline USA VSL into 2020 USD using the Bureau of Labor Statistics [inflation rate calculator](https://www.bls.gov/data/inflation_calculator.htm ), which gives a value for an inflation factor, \\(i_{2020}\\), to convert from 2015 to 2020 USD. The inflation-adjusted value is further scaled to determine VSL for different countries in certain years. This scaling process involves multiplying the adjusted VSL value by the ratio of Gross National Income Per Capital, Atlas Method (GNI) of a specific country in 2015 to that of the United States. This ratio is raised to an income elasticity value, \\(e\\). The Viscusi method assumes that the income elasticity value is one. This assumption is based on an analysis by the authors on income data from various countries that revealed similarity in the income-to-VSL relationship compared to that of the United States, thus negating the need to raise the ratio of GNI Atlas to an exponent other than one. Further scaling by the growth rate in GNI Atlas of the country between 2015 and 2020 (\\(g\_{1}\\)) yields the VSL in 2020 for a given country.
 
 $$\text{VSL}_{ISO,\ 2020} = VSL_{\text{USA}} \times i_{2020} \times \left( \frac{\text{GNI}_{ISO,2015}}{\text{GNI}_{USA,2015}} \right)^{e} \times \left( 1 + g_{1,\ ISO} \right)$$
 
@@ -231,7 +231,7 @@ The growth rate in the GNI Atlas for a specific country from 2015 to 2020, \\(g\
 
 $$g_{1,ISO} = \frac{\text{GN}I_{2020,ISO} - GNI_{2015,ISO}{\times i}_{2020}}{\text{GN}I_{2015,ISO} \times i_{2020}}$$
 
-GNI Atlas data for most countries is collected from [World Bank](https://data.worldbank.org/indicator/NY.GNP.PCAP.CD ), with the exception of Taiwan, where [national statistical data](https://eng.stat.gov.tw/default.aspx) is used.
+GNI Atlas data for most countries is collected from [World Bank](https://data.worldbank.org/indicator/NY.GNP.PCAP.CD ), with the exception of Taiwan, where [national statistical data](https://eng.stat.gov.tw/default.aspx ) is used.
 
 To adjust the ISO-specific VSL values from 2020 to another year, denoted \\(t\\), an additional growth factor, \\(g\_{t}\\), is applied:
 
@@ -269,7 +269,7 @@ The growth rate takes into account the GDP PPP data for the specific country in 
 
 $$g_{t,ISO} = \frac{\text{GDP PPP}_{t,ISO} - \text{GDP PPP}_{2020,ISO} \times i_{t}}{\text{GDP PPP}_{2020,ISO} \times i_{t}}$$
 
-Long-term income projections for a subset of countries come from a [2018 Organization for Economic Co-operation and Development (OECD) study](https://www.oecd-ilibrary.org/economics/the-long-view_b4f4e03e-en) for the years 2010, 2030, 2040, and 2050. Projections for the remaining countries are calculated based on [Shared Socioeconomic Pathways 2 (SSP2) projections](https://www.sciencedirect.com/science/article/pii/S0959378016300784). If necessary, values are interpolated for intermediate years with growth rates adjustments.
+Long-term income projections for a subset of countries come from a [2018 Organization for Economic Co-operation and Development (OECD) study](https://www.oecd-ilibrary.org/economics/the-long-view_b4f4e03e-en ) for the years 2010, 2030, 2040, and 2050. Projections for the remaining countries are calculated based on [Shared Socioeconomic Pathways 2 (SSP2) projections](https://www.sciencedirect.com/science/article/pii/S0959378016300784 ). If necessary, values are interpolated for intermediate years with growth rates adjustments.
 
 These VSL estimates for each country in each year are then multiplied by the premature deaths generated by FATE's health impacts module to determine associated welfare loss from premature death for each country, age category, and cause.
 
